# SpO2_CO2

./: CMakeLists.txt  README.md  nrf52dk_nrf52832.overlay  prj.conf
max30102/zephyr/: CMakeLists.txt  Kconfig  max30102.c  max30102.h
max30102/zephyr/dts/bindings/: maxim,max30102-i2c.yaml
src/: app.c  app.h  button.c  button.h  co2.c  co2.h  display.c  display.h  main.c  spo2.c  spo2.h
stc31/zephyr/: CMakeLists.txt  Kconfig  stc31.c  stc31.h
stc31/zephyr/dts/bindings/: sensirion,stc31-i2c.yaml
